--- a/concept.html
+++ b/concept.html
@@ -13,8 +13,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/file-uploader/5.16.2/fine-uploader.min.js"></script>
     <!-- Fine Uploader Thumbnails template w/ customization
     ====================================================================== -->
+
+
+
     <script type="text/template" id="qq-template-manual-trigger">
-        <div class="qq-uploader-selector qq-uploader" qq-drop-area-text="Drop files here">
+        <div class="qq-uploader-selector qq-uploader" qq-drop-area-text="Drop files here" id="first_div">
             <div class="qq-total-progress-bar-container-selector qq-total-progress-bar-container">
                 <div role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" class="qq-total-progress-bar-selector qq-progress-bar qq-total-progress-bar"></div>
             </div>
@@ -26,11 +29,25 @@
                     <div>Select files</div>
                 </div>
                 <button type="button" id="trigger-upload" class="btn btn-primary">
-                    <i class="icon-upload icon-white"></i> Upload
+                    <i class="icon-upload icon-white"></i> submit
                 </button>
-            </div>
+                <!--clear form -->
+                <button type="button" id="clear-button" class="btn btn-primary">
+                    <i class="icon-upload icon-white"></i> clear
+                </button>
+                <!--go back -->
+                <a class="icon-upload icon-white" href="http://localhost:3008/mainpage">
+                <button type="button" id="return-button" class="none" >
+                    <i class="icon-upload icon-white"></i> cancel
+                </a>
+
+                </button>
+
+
+
+
             <span class="qq-drop-processing-selector qq-drop-processing">
-                <span>Processing dropped files...</span>
+                <span>Processing approve files...</span>
                 <span class="qq-drop-processing-spinner-selector qq-drop-processing-spinner"></span>
             </span>
             <ul class="qq-upload-list-selector qq-upload-list" aria-live="polite" aria-relevant="additions removals">
@@ -47,6 +64,7 @@
                     <button type="button" class="qq-btn qq-upload-cancel-selector qq-upload-cancel">Cancel</button>
                     <button type="button" class="qq-btn qq-upload-retry-selector qq-upload-retry">Retry</button>
                     <button type="button" class="qq-btn qq-upload-delete-selector qq-upload-delete">Delete</button>
+
                     <span role="status" class="qq-upload-status-text-selector qq-upload-status-text"></span>
                 </li>
             </ul>
@@ -75,6 +93,74 @@
                 </div>
             </dialog>
         </div>
+            <div id="success-message">File submitted successfully</div>
+
+
+            <button type="submit"  id="move-button" class="btn btn-primary">approve</button>
+
+    </script>
+<!--second drope zone-->
+<!--    <script type="text/template" id="qq-template-manual-trigger2">-->
+<!--        <div class="qq-uploader-selector qq-uploader-second" qq-drop-area-text="approved file here" id="second_div">-->
+<!--            <div class="qq-total-progress-bar-container-selector qq-total-progress-bar-container">-->
+<!--                <div role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" class="qq-total-progress-bar-selector qq-progress-bar qq-total-progress-bar"></div>-->
+<!--            </div>-->
+<!--            <div class="qq-upload-drop-area-selector qq-upload-drop-area" qq-hide-dropzone>-->
+<!--                <span class="qq-upload-drop-area-text-selector"></span>-->
+<!--            </div>-->
+
+<!--            &lt;!&ndash; clear form &ndash;&gt;-->
+<!--            <button type="button" id="clear-button2" class="btn btn-primary">-->
+<!--                <i class="icon-upload icon-white"></i> clear-->
+<!--            </button>-->
+<!--        </div>-->
+<!--    </script>-->
+
+            <!-- Same code as the first dropzone -->
+<!--    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>-->
+<!--    <ul id="file-list"></ul>-->
+<!--    <script>-->
+<!--        $(document).ready(function() {-->
+<!--            $.get('/list-files', function(data) {-->
+<!--                var $fileList = $('#file-list');-->
+<!--                data.forEach(function(file) {-->
+<!--                    $fileList.append('<li>' + file.name + '</li>');-->
+<!--                });-->
+<!--            });-->
+<!--        });-->
+<!--    </script>-->
+
+    <div id="file-box">
+        <ul id="file-list"></ul>
+    </div>
+
+
+    <script>
+        var fileList = document.getElementById('file-list');
+
+        var xhr = new XMLHttpRequest();
+        xhr.open('GET', 'http://localhost:8000/list-files', true);
+
+        xhr.onload = function() {
+            if (xhr.status === 200) {
+                var files = JSON.parse(xhr.responseText);
+
+                for (var i = 0; i < files.length; i++) {
+                    var file = files[i];
+                    var listItem = document.createElement('li');
+                    listItem.textContent = file;
+                    fileList.appendChild(listItem);
+                }
+            } else {
+                console.error('Error retrieving file list');
+            }
+        };
+
+        xhr.onerror = function() {
+            console.error('Error retrieving file list');
+        };
+
+        xhr.send();
     </script>
 
     <style>
@@ -84,8 +170,35 @@
             font-size: 14px;
             padding: 7px 20px;
             background-image: none;
-        }
 
+        }
+#return-button {
+    color: white;
+    background-color: #00ABC7;
+    font-size: 14px;
+    padding: 7px 20px;
+    background-image: none;
+    margin-left: 20px;
+}
+
+        #clear-button {
+            color: white;
+            background-color: #00ABC7;
+            font-size: 14px;
+            padding: 7px 20px;
+            background-image: none;
+            margin-left: 20px;
+        }
+        #move-button {
+            color: white;
+            background-color: #00ABC7;
+            font-size: 14px;
+            padding: 7px 20px;
+            background-image: none;
+            margin-left:500px;
+            display: none;
+
+        }
         #fine-uploader-manual-trigger .qq-upload-button {
             margin-right: 15px;
         }
@@ -97,6 +210,40 @@
         #fine-uploader-manual-trigger .qq-uploader .qq-total-progress-bar-container {
             width: 60%;
         }
+
+        /*second dropzone*/
+
+        #success-message {
+            display: none;
+            background-color: mediumspringgreen;
+
+            width: 185px;
+            height: 25px;
+            color: white;
+        }
+
+        #file-box {
+            border: 1px solid #ccc;
+            padding: 10px;
+            max-width: 1000px;
+            margin: 50px;
+
+        }
+
+        #file-list {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+        }
+
+        #file-list li {
+            padding: 5px;
+            border-bottom: 1px solid #ccc;
+        }
+
+        #file-list li:last-child {
+            border-bottom: none;
+        }
     </style>
 
     <title>Fine Uploader Manual Upload Trigger Demo</title>
@@ -104,16 +251,23 @@
 <body>
 <!-- Fine Uploader DOM Element
 ====================================================================== -->
+
+
 <div id="fine-uploader-manual-trigger"></div>
+<div id="fine-uploader-manual-trigger2"></div>
+
 
 <!-- Your code to create an instance of Fine Uploader and bind to the DOM/template
 ====================================================================== -->
 <script>
+
+
+
     var manualUploader = new qq.FineUploader({
         element: document.getElementById('fine-uploader-manual-trigger'),
         template: 'qq-template-manual-trigger',
         request: {
-            endpoint: '/server/uploads'
+            endpoint: '/Users/imac09/IdeaProjects/Challenge_7.0/uploadFiles'
         },
         thumbnails: {
             placeholders: {
@@ -122,116 +276,104 @@
             }
         },
         autoUpload: false,
-        debug: true
-    });
-
-    qq(document.getElementById("trigger-upload")).attach("click", function() {
-        manualUploader.uploadStoredFiles();
-    });
-</script>
-
-<script>
-    $(document).ready(function() {
-        $("form.submit").on("submit",function(e){
-            e.preventDefault();
-            var Firstname = $('input[name=fnamesubmit]').val();
-            var Lastname = $('input[name=lnamesubmit]').val();
-            var Age = $('input[name=age]').val();
-            // console.log("hello")
-            console.log("First Name:" + Firstname)
-            console.log("Last Name:" + Lastname)
-            console.log("Age:" + Age)
-            $.ajax({
-                url:"/form",
-                type:"POST",
-                data:{
-                    Firstname: Firstname,
-                    Lastname: Lastname,
-                    Age: Age},
-                dataType:"json",
-                success: function(msg) {
-                    if (msg.msg == "success"){
-                        document.getElementById("FormSuccess").innerHTML = "Form Submitted Successfully!"
-                    } else {
-                        document.getElementById("FormSuccess").innerHTML = "Form Failed!"
-                    }
-                    console.log(msg)
-                }
-            })
-        })
-        $("#approve").on("click", function(e) {
-            e.preventDefault();
-            var approve = $('input[name=approve]').val();
-            $.ajax({
-                url:"/approve",
-                type:"POST",
-                data: {approve:approve},
-                dataType: "json",
-                success: function (msg) {
-                    if (msg.msg == "success") {
-                        document.getElementById("FormSuccess").innerHTML = "Approved!";
-                    }
-                    if (msg.msg == "error") {
-                        console.log(msg.msg)
-                        document.getElementById("FormSuccess").innerHTML = "Approve Failed!";
-                    }
-                }
-            })
-        })
-    })
-</script>
-
-<!--DataTables-->
-<script type="text/javascript">
-    $(document).ready( function () {
-        $('#table').DataTable({});
-    } );
-</script>
-<script>
-    //Browser Support Code
-    function ajaxFunction() {
-        var ajaxRequest;  // The variable that makes Ajax possible!
-        try {
-            // Opera 8.0+, Firefox, Safari
-            ajaxRequest = new XMLHttpRequest();
-        } catch (e) {
-            // Internet Explorer Browsers
-            try {
-                ajaxRequest = new ActiveXObject("Msxml2.XMLHTTP");
-            } catch (e) {
-                try {
-                    ajaxRequest = new ActiveXObject("Microsoft.XMLHTTP");
-                } catch (e) {
-                    // Something went wrong
-                    alert("Your browser broke!");
-                    return false;
-                }
+        debug: true,
+        callbacks: {
+            onComplete: function(id, fileName, responseJSON) {
+                // var successMessage = document.getElementById("success-message");
+                // successMessage.style.display = "block";
+                var uploadButton = document.getElementById('move-button');
+                uploadButton.style.display = 'block';
             }
         }
-// Restricts input for each element in the set of matched elements to the given inputFilter.
-        (function($) {
-            $.fn.inputFilter = function(inputFilter) {
-                return this.on("input keydown keyup mousedown mouseup select contextmenu drop", function() {
-                    if (inputFilter(this.value)) {
-                        this.oldValue = this.value;
-                        this.oldSelectionStart = this.selectionStart;
-                        this.oldSelectionEnd = this.selectionEnd;
-                    } else if (this.hasOwnProperty("oldValue")) {
-                        this.value = this.oldValue;
-                        this.setSelectionRange(this.oldSelectionStart, this.oldSelectionEnd);
-                    } else {
-                        this.value = "";
-                    }
-                });
-            };
-        }(jQuery));
-// Install input filters.
-        $("#fname").inputFilter(function(value) {
-            return /^[a-z]*$/i.test(value); });
-        $("#lname").inputFilter(function(value) {
-            return /^[a-z]*$/i.test(value); });
-        $("#age").inputFilter(function(value) {
-            return /^[0-9a-f]*$/i.test(value); });}
+        // });
+
+
+    });
+
+
+
+    // var successMessage = document.getElementById('success-message');
+        // uploader.on('complete', function(id, name, response) {
+        //     if (response.success) {
+        //         successMessage.classList.remove('hidden');
+        //     } else {
+        //         successMessage.classList.add('hidden');
+        //     }
+        // });
+
+
+//========= second drop zone  =========
+//     var manualUploader2 = new qq.FineUploader({
+//         element: document.getElementById('fine-uploader-manual-trigger2'),
+//         template: 'qq-template-manual-trigger2',
+//         request: {
+//             endpoint: '/Users/imac09/IdeaProjects/Challenge_7.0/upload'
+//         },
+//         thumbnails: {
+//             placeholders: {
+//                 waitingPath: '/source/placeholders/waiting-generic.png',
+//                 notAvailablePath: '/source/placeholders/not_available-generic.png'
+//             }
+//         },
+//         autoUpload: false,
+//         debug: true,
+//
+//     });
+//     console.log(manualUploader2);
+
+    qq(document.getElementById("trigger-upload")).attach("click", function() {
+            manualUploader.uploadStoredFiles();
+        })
+
+        qq(document.getElementById("clear-button")).attach("click", function() {
+            manualUploader.clearStoredFiles();
+        })
+
+    const buttonToDelete = document.getElementById("move-button");
+    // buttonToDelete.remove();
+
+    const deleteButton = document.getElementById("clear-button");
+
+    deleteButton.addEventListener("click", function() {
+        buttonToDelete.remove();
+    });
+    // ==========handle file move===========
+
+    // document.getElementById("move-button").addEventListener("click", function() {
+    //     var sourcePath = '/Users/imac09/IdeaProjects/Challenge_7.0/uploadFiles'; // the path to the file you want to move
+    //     var destPath = '/Users/imac09/IdeaProjects/Challenge_7.0/DataDir'; // the path to the directory where you want to move the file
+    //
+    //     fs.rename(sourcePath, destPath, function(err) {
+    //         if (err) {
+    //             console.log('Error moving file: ' + err);
+    //         } else {
+    //             console.log('File moved successfully!');
+    //         }
+    //     });
+    // });
+
+    document.getElementById('move-button').addEventListener('click', function() {
+        var xhr = new XMLHttpRequest();
+        xhr.open('POST', '/move-file', true);
+        xhr.onreadystatechange = function() {
+            if (xhr.readyState === XMLHttpRequest.DONE) {
+                if (xhr.status === 200) {
+                    console.log(xhr.responseText);
+                } else {
+                    console.log('Error moving file');
+                }
+            }
+        };
+        xhr.send();
+    });
+</script>
+
+<script>
+
+</script>
+<script>
+
+
 </script>
 
 </body>
